<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/starArticle"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/navigation_title_starred" />

    <item android:id="@+id/unStarArticle"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_star"
        android:title="@string/navigation_title_unstar" />
</menu>