<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/articlesFragment">

    <fragment
        android:id="@+id/articlesFragment"
        android:name="com.joshowen.newsapp.ui.articles.ArticlesFragment"
        android:label="@string/page_title_articles" >
        <action
            android:id="@+id/action_articlesFragment_to_starredFragment"
            app:destination="@id/starredFragment" />
    </fragment>
    <fragment
        android:id="@+id/starredFragment"
        android:name="com.joshowen.newsapp.ui.starred.StarredFragment"
        android:label="@string/page_title_starred" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.joshowen.newsapp.ui.settings.SettingsFragment"
        android:label="@string/page_title_settings" />
    <fragment
        android:id="@+id/viewArticleFragment"
        android:name="com.joshowen.newsapp.ui.viewarticle.ViewArticleFragment"
        android:label="@string/page_title_article" >
        <argument
            android:name="selectedArticle"
            app:argType="com.joshowen.newsrepository.room.models.Article" />
    </fragment>
</navigation>