<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settingsFragment"
        app:showAsAction="never"
        android:menuCategory="secondary"
        android:title="@string/navigation_title_settings" />

</menu>